--- a/style.css
+++ b/style.css
@@ -49,3 +49,10 @@ h3 {
         font-size: 2em;
     }
 }
+
+a { color: black; }
+a:link { color: black; }
+a:visited { color: black; }
+a:focus { color: black; }
+a:hover { color: black; }
+a:active { color: black; }
