--- a/style.css
+++ b/style.css
@@ -50,9 +50,9 @@ h3 {
     }
 }
 
-a { color: black; }
-a:link { color: black; }
-a:visited { color: black; }
-a:focus { color: black; }
-a:hover { color: black; }
-a:active { color: black; }
+.MM { color: black; }
+.MM:link { color: black; }
+.MM:visited { color: black; }
+.MM:focus { color: black; }
+.MM:hover { color: black; }
+.MM:active { color: black; }
